Got Bronze league. Added strategy system. Added cell and tree entities

--- a/code/SC2021_Core/SC2021_Core.vcxproj
+++ b/code/SC2021_Core/SC2021_Core.vcxproj
@@ -162,12 +162,15 @@
   <ItemGroup>
     <ClInclude Include="Bot.h" />
     <ClInclude Include="BotImpl.h" />
+    <ClInclude Include="CellEntity.h" />
     <ClInclude Include="CommandHelper.h" />
     <ClInclude Include="Core_PCH.h" />
     <ClInclude Include="GameConfig.h" />
     <ClInclude Include="InputData.h" />
     <ClInclude Include="Command.h" />
     <ClInclude Include="OutputData.h" />
+    <ClInclude Include="Strategy.h" />
+    <ClInclude Include="TreeEntity.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
