--- a/code/SC2021_Core/SC2021_Core.vcxproj
+++ b/code/SC2021_Core/SC2021_Core.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="BotImpl.cpp" />
     <ClCompile Include="CommandHelper.cpp" />
     <ClCompile Include="Core_PCH.cpp" />
+    <ClCompile Include="Map.cpp" />
     <ClCompile Include="StrategyHelper.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -170,6 +171,7 @@
     <ClInclude Include="GameConfig.h" />
     <ClInclude Include="InputData.h" />
     <ClInclude Include="Command.h" />
+    <ClInclude Include="Map.h" />
     <ClInclude Include="OutputData.h" />
     <ClInclude Include="Strategy.h" />
     <ClInclude Include="StrategyHelper.h" />
