--- a/code/SC2021_Core/SC2021_Core.vcxproj.filters
+++ b/code/SC2021_Core/SC2021_Core.vcxproj.filters
@@ -6,6 +6,7 @@
     <ClCompile Include="BotImpl.cpp" />
     <ClCompile Include="CommandHelper.cpp" />
     <ClCompile Include="StrategyHelper.cpp" />
+    <ClCompile Include="Map.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core_PCH.h" />
@@ -37,6 +38,7 @@
     <ClInclude Include="Direction.h">
       <Filter>Data\Bot</Filter>
     </ClInclude>
+    <ClInclude Include="Map.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Data">
