- Provide a custom function to calculate day coef for darkness. - Updated days strategies.

--- a/code/CodingameUtility/CodingameUtility.vcxproj
+++ b/code/CodingameUtility/CodingameUtility.vcxproj
@@ -154,6 +154,7 @@
   <ItemGroup>
     <ClInclude Include="CodingameUtility_PCH.h" />
     <ClInclude Include="CommonDefs.h" />
+    <ClInclude Include="CompositeFunction.h" />
     <ClInclude Include="ContainerHelper.h" />
     <ClInclude Include="SGrid2DInPlace.h" />
     <ClInclude Include="Profiler.h" />
