--- a/code/CodingameUtility/CodingameUtility.vcxproj.filters
+++ b/code/CodingameUtility/CodingameUtility.vcxproj.filters
@@ -16,5 +16,6 @@
     <ClInclude Include="CommonDefs.h" />
     <ClInclude Include="SGrid2DInPlace.h" />
     <ClInclude Include="ContainerHelper.h" />
+    <ClInclude Include="CompositeFunction.h" />
   </ItemGroup>
 </Project>
